<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:background="@drawable/register" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="Register Form"
                    android:textColor="@color/primaryColor"
                    android:textSize="24sp"
                    android:layout_marginBottom="24dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent">

                        <EditText
                            android:id="@+id/editTextName"
                            style="@style/modifiedEditText"
                            android:textColor="@color/primarDarkyColor"
                            android:autofillHints=""
                            android:background="@color/violetWhite"
                            android:hint="@string/name"
                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent">

                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:textColor="@color/primarDarkyColor"
                            android:autofillHints=""
                            android:background="@color/violetWhite"
                            android:hint="@string/login_email_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent">

                        <EditText
                            android:id="@+id/editTextPassword"
                            style="@style/modifiedEditText"
                            android:background="@color/violetWhite"
                            android:textColor="@color/primarDarkyColor"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:autofillHints="" />
                    </com.google.android.material.textfield.TextInputLayout>



                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Button
            android:id="@+id/cirRegisterButton"
            style="@style/loginButton"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/register" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>