<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/login_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/login"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryColor"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="50dp"
                    android:text="Login into your account"/>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                >


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent">

                <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:background="#FBD7E3"
                    android:textColor="@color/primarDarkyColor"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                android:backgroundTint="@color/primaryColor"
                style="@style/parent">

                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"

                    android:background="#FBD7E3"
                    android:textColor="@color/primarDarkyColor"
                    android:textColorHint="@color/primarDarkyColor"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            </androidx.cardview.widget.CardView>



            <Button
                android:layout_marginTop="50dp"
                android:layout_height="65dp"
                android:layout_width="match_parent"
                android:id="@+id/cirLoginButton"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:text="@string/login"/>

            <TextView
                style="@style/parent"
                android:layout_marginTop="50dp"
                android:onClick="onLoginClick"
                android:text="@string/new_user_register_now"
                android:textAlignment="center"
                android:textColor="@color/primaryColor"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="OnClick" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>